--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.opButton,
+.numButton,
+.specButton{
+  color: #bb1333 !important;
+text-transform: uppercase;
+background: #ffffff;
+padding: 20px;
+border: 4px solid #bb1333 !important;
+border-radius: 6px;
+display: inline-block;
+transition: all 0.3s ease 0s;
+font-size: 1Rem;
+}
+
+
+.opButton:hover,
+.numButton:hover,
+.specButton:hover {
+  color: #494949 !important;
+  border-radius: 50px;
+  border-color: #494949 !important;
+  transition: all 0.3s ease 0s;
+  }
+
