--- a/src/index.css
+++ b/src/index.css
@@ -11,27 +11,64 @@ code {
     monospace;
 }
 
+.container{
+  width: 500px;
+  margin:5rem auto;
+  border: 1px solid black;
+  background-color: #bb1333;
+  border-radius: 1rem;
+
+}
+.App{
+  padding:1rem;
+
+  /* display:flex; */
+  /* flex-direction: row; */
+}
+
+.logo{
+  padding: 1rem;
+}
+
+.displayBox{
+  background-color:black;
+  border-radius: 1rem;
+  border: 1px solid white;
+  width:90%;
+  margin: 1rem auto;
+}
+
+.specContainer{
+  width:50%;
+  display:flex;
+}
+.numContainer{
+  width:40%;
+  display:flex;
+  flex-flow: row wrap;
+}
+
+.opContainer{
+  display: flex;
+  flex-flow: column nowrap;
+  width:5%;
+  padding:1rem;
+  /* margin: 0 auto; */
+  /* float: Right; */
+}
+
 .opButton,
 .numButton,
 .specButton{
   color: #bb1333 !important;
 text-transform: uppercase;
 background: #ffffff;
-padding: 20px;
-border: 4px solid #bb1333 !important;
-border-radius: 6px;
+padding: 1rem;
+border: 4px solid black !important;
+border-radius: 50px;
 display: inline-block;
 transition: all 0.3s ease 0s;
 font-size: 1Rem;
+margin:2px;
 }
-
-
-.opButton:hover,
-.numButton:hover,
-.specButton:hover {
-  color: #494949 !important;
-  border-radius: 50px;
-  border-color: #494949 !important;
-  transition: all 0.3s ease 0s;
-  }
 
